--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/moment": "^2.13.0",
     "@types/mysql": "^2.15.16",
     "@types/passport": "^1.0.4",
     "@types/passport-http-bearer": "^1.0.36",
@@ -28,7 +30,9 @@
     "bootstrap": "^4.5.0",
     "css-loader": "^1.0.1",
     "express": "^4.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
