--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "bcrypt": "^5.0.0",
@@ -40,6 +41,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-html-parser": "^2.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^7.3.1",
